--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "test:create-prisma-environment":"npm link ./prisma/vitest-environment-prisma",
-    "test:install-prisma-environment":"npm link vitest-environment-prisma",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "build": "tsup src --out-dir build",
     "test": "vitest run --dir src/use-cases",
     "test:watch": "vitest --dir src/use-cases",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.11.27",
+    "@types/supertest": "6.0.2",
     "@typescript-eslint/eslint-plugin": "7.2.0",
     "@typescript-eslint/parser": "7.2.0",
     "@vitest/coverage-v8": "1.4.0",
@@ -39,6 +41,7 @@
     "eslint": "8.57.0",
     "npm-run-all": "4.1.5",
     "prisma": "5.11.0",
+    "supertest": "6.3.4",
     "tsx": "4.7.1",
     "typescript": "5.4.2",
     "vite-tsconfig-paths": "4.3.2",
